--- a/index.html
+++ b/index.html
@@ -169,8 +169,9 @@
             </div>
             <div class="deal-product-list">
                 <div class="product">
-                    <img src="images/fashion-road.png">
-                    <p class="product-name">Fashion Road 6pc Clay Sculpting Tools</p>
+                    <a href="#"><img src="images/fashion-road.png"></a>
+                    <p class="product-cat">POTTERY</p>
+                    <a class="product-name" href="#">Fashion Road 6pc Clay Sculpting Tools</a>
                     <div class="invis-box"></div>
                     <div class="product-details">
                         <div class="product-price">
@@ -186,8 +187,9 @@
                     </div>
                 </div>
                 <div class="product">
-                    <img src="images/foldable-jewelry.png">
-                    <p class="product-name">Foldable Jewelry Magnifier with Bright LED Light for Gems, Jewel, etc.</p>
+                    <a href="#"><img src="images/foldable-jewelry.png"></a>
+                    <p class="product-cat">JEWELRY</p>
+                    <a class="product-name" href="#">Foldable Jewelry Magnifier with Bright LED Light for Gems, Jewel, etc.</a>
                     <div class="product-details">
                         <div class="product-price">
                             <p>Rp. 129,999.-</p>
@@ -202,8 +204,9 @@
                     </div>
                 </div>
                 <div class="product">
-                    <img src="images/fashion-road.png">
-                    <p class="product-name">Fashion Road 6pc Clay Sculpting Tools</p>
+                    <a href="#"><img src="images/fashion-road.png"></a>
+                    <p class="product-cat">POTTERY</p>
+                    <a class="product-name" href="#">Fashion Road 6pc Clay Sculpting Tools</a>
                     <div class="invis-box"></div>
                     <div class="product-details">
                         <div class="product-price">
